[project]
name = "ws.nginxdbauth"
version = "1.1.0.dev0"
description = "Authenticate an nginx request against an SQL database"

dependencies = [
  "flask",
  "sqlalchemy>=2.0.0"
]
optional-dependencies = {test=[
  "pytest",
  "pytest-cov",
  "passlib",
]}

authors = [{name="Wolfgang Schnerring", email="wosc@wosc.de"}]
license = {text=" BSD-3-Clause"}
urls = {Repository="https://github.com/wosc/nginx-db-auth"}

dynamic = ["readme"]

[project.scripts]
nginx-db-auth-cgi = "ws.nginxdbauth.web:cgi"
nginx-db-auth-serve ="ws.nginxdbauth.web:serve"


[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ws"]  # required for pep420 namespace package, pypa/hatch#587

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [{path="README.rst"}, {text="\n\n"}, {path="CHANGES.txt"}]


[tool.hatch.envs.test]
features = ["test"]
# Make work on older OS
python = "3"
dependencies = ["pip>=23"]

[tool.hatch.envs.test.scripts]
run = "pytest"

[tool.pytest.ini_options]
addopts = "--tb=native --cov=src --cov-report=html"
